<resources>
    <string name="app_name">FinalProject</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="title_activity_sign_up">SignUp Activity</string>
    <string name="title_activity_messages">Messages Activity</string>
    <string name="title_activity_compose">Compose Activity</string>
    <string name="textEmail">Email</string>
    <string name="textPassword">Password</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonNewAccount">Create New Account</string>
    <string name="textFirstName">First Name</string>
    <string name="textLastName">Last Name</string>
    <string name="textConfirmPassword">Confirm Password</string>
    <string name="buttonSignUp">Sign Up</string>
    <string name="buttonCancel">Cancel</string>
    <string name="strRefresh">Refresh</string>
    <string name="strCompose">Compose</string>
    <string name="strLogout">Logout</string>
    <string name="labelMessage">Message:</string>
    <string name="buttonSend">Send</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="textEnterKeyword">Enter Keyword Search Term</string>
    <string name="buttonSubmit">Submit</string>
    <string name="title_activity_gallery">Gallery Activity</string>
    <string name="title_activity_details">Details Activity</string>
    <string name="strShowFavs">Show Favourites</string>
    <string name="strClearFavs">Clear Favourites</string>
    <string name="strShowShared">Show Shared</string>
    <string name="strSharingStats">Sharing Stats</string>
    <string name="strClearShared">Clear Shared</string>
    <string name="buttonShare">Share</string>
    <string name="buttonFacebookLogin">Login with Facebook</string>
    <string name="facebook_app_id">366607506797000</string>
    <string name="buttonTwitterLogin">Login with Twitter</string>
    <string name="radioButtonMale">Male</string>
    <string name="radioButtonFemale">Female</string>
    <string name="labelGender">Gender:</string>
    <string name="labelSelectAvatar">Select Avatar</string>
    <string name="menuInbox">Inbox</string>
    <string name="menuCompose">Compose</string>
    <string name="signOut">Sign Out</string>
    <string name="hintMessage">Type message here...</string>
    <string name="attachImage">Attach Image</string>
    <string name="title_activity_message">Message Activity</string>
    <string name="buttonReply">Reply</string>
    <string name="buttonDelete">Delete</string>
    <string name="menuAlbum">Albums</string>
    <string name="title_activity_albums">Albums Activity</string>
    <string name="checkBoxPrivate">Private</string>
    <string name="menuAddAlbum">Add Album</string>
    <string name="title_activity_add_album">Add Album</string>
    <string name="textAlbumName">Album Name</string>
    <string name="buttonAdd">Add</string>
    <string name="title_activity_view_album">View Album</string>
    <string name="menuAddImage">Add Image</string>
    <string name="menuViewSharedUsers">View Shared Users</string>
    <string name="menuInviteUser">Invite User</string>
    <string name="title_activity_view_image">View Image</string>
    <string name="buttonVerify">Verify</string>
    <string name="hintEmail">Email</string>
    <string name="menuUpdateProfile">Update Profile</string>
    <string name="title_activity_update_profile">Update Profile</string>
    <string name="buttonUpdate">Update</string>
    <string name="hintUserName">User FirstName LastName</string>
</resources>
