<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.finalproject.SignUpActivity"
    android:clickable="false">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtFName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/textFirstName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtLastName"
        android:hint="@string/textLastName"
        android:layout_below="@+id/txtFName"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPassword"
        android:inputType="textPassword"
        android:hint="@string/textPassword"
        android:layout_above="@+id/txtConfirmPassword"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtConfirmPassword"
        android:inputType="textPassword"
        android:hint="@string/textConfirmPassword"
        android:layout_above="@+id/btnUpdate"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonSignUp"
        android:id="@+id/btnUpdate"
        android:layout_above="@+id/btnCancel"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonCancel"
        android:id="@+id/btnCancel"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/btnUpdate" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignTop="@+id/lblGender"
        android:layout_marginTop="-5dp"
        android:layout_toEndOf="@+id/lblGender"
        android:id="@+id/radioGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonMale"
            android:id="@+id/rbMale"
            android:tag="@string/radioButtonMale"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonFemale"
            android:id="@+id/rbFemale"
            android:tag="@string/radioButtonFemale"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/labelGender"
        android:id="@+id/lblGender"
        android:layout_below="@+id/chkPrivacy"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:id="@+id/imgBtnAvatar"
        android:background="@null"
        android:clickable="true"
        android:src="@drawable/default_avatar"
        android:layout_alignTop="@+id/lblSelectAvatar"
        android:layout_toEndOf="@+id/radioGroup" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/labelSelectAvatar"
        android:id="@+id/lblSelectAvatar"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtEmail"
        android:layout_below="@+id/txtLastName"
        android:layout_alignParentStart="true"
        android:hint="@string/hintEmail" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxPrivate"
        android:id="@+id/chkPrivacy"
        android:layout_below="@+id/txtEmail"
        android:layout_alignParentStart="true" />

</RelativeLayout>
