<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.finalproject.LoginActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtLastName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/hintUserName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPassword"
        android:inputType="textPassword"
        android:layout_below="@+id/txtLastName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:hint="@string/textPassword" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonLogin"
        android:id="@+id/btnLogin"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonNewAccount"
        android:id="@+id/btnNewAccount"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonFacebookLogin"
        android:id="@+id/btnFacebookLogin"
        android:layout_below="@+id/btnNewAccount"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonTwitterLogin"
        android:id="@+id/btnTwitterLogin"
        android:layout_alignBottom="@+id/btnFacebookLogin"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
