<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.finalproject.AddAlbumActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtAlbumName"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:hint="@string/textAlbumName" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxPrivate"
        android:id="@+id/chkPrivacy"
        android:layout_below="@+id/txtAlbumName"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonAdd"
        android:id="@+id/btnAddAlbum"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/chkPrivacy"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
